Show nepomuk tag values as plain text (Do not parse html tags)

BUG: 262464
FIXED-IN: 4.10
REVIEW: 108334